# GST

./: .gitignore  CMakeLists.txt  README.md  cuda.cu  generate_all_data_samples.sh  generator  generator.c  generator_with_tcp.c  openmp.c  openmpi.c  run_cluster_openmpi_execution_on_all_data_samples.sh  run_cuda_execution_on_all_data_samples.sh  run_openmp_execution_on_all_data_samples.sh  run_openmpi_execution_on_all_data_samples.sh  run_sequential_execution_on_all_data_samples.sh  sequential_execution  sequential_execution.c  sequential_execution_cp.c  test_input_file  utils.c  utils.h
laba1/: generator.c  laba1  laba1.c  sequential_execution  sequential_execution.c  test_output_file
openmp_with_tcp/: Dockerfile  docker-compose.yml  generator_with_tcp.c  openmp_with_tcp.c
